appId: ${APP_ID}
env:
  Name: "User"
  EMAIL: "user@test.com"
  PASSWORD: "password"
---
- launchApp
- runFlow:
    when:
      visible: "SenaiaPY Starter"
    file: ../utils/onboarding.yaml
- assertVisible: "Sign In"
- assertVisible:
    id: "login-button"
- tapOn:
    id: "login-button"
- runFlow: ../utils/hide-keyboard.yaml # Hide keyboard login button will auto focus on email input which means keyboard will be visible, need to hide it to make sure error are visible
- assertVisible: "Email is required"
- assertVisible: "Password is required"
- tapOn:
    id: "name"
- inputText: ${Name}
- tapOn:
    id: "email-input"
- inputText: "email"
- assertVisible: "Invalid email format"
- inputText: ${EMAIL}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: "password-input"
- inputText: ${PASSWORD}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: "login-button"
- assertVisible: "Typography"
