appId: ${APP_ID}
tags:
  - util
---
- assertVisible: "SenaiaPY Starter"
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: "Sign In"